public/analytics/v0.6/_sources/reference/tmlt/analytics/index.rst.txt



********************
API Reference
********************

.. py:module:: tmlt.analytics

.. autoapi-nested-parse::

   `Tumult Labs' <https://tmlt.io>`_ differentially private analytics library.


Modules
=======

.. list-table::

   * - :mod:`.binning_spec`
     - A BinningSpec defines a binning operation on a column.
   * - :mod:`.cleanup`
     - Cleanup functions for Analytics.
   * - :mod:`.keyset`
     - A KeySet specifies a list of values for one or more columns.
   * - :mod:`.privacy_budget`
     - Classes for specifying privacy budgets.
   * - :mod:`.protected_change`
     - Types for programmatically specifying what changes in input tables are protected.
   * - :mod:`.query_builder`
     - An API for building differentially private queries from basic operations.
   * - :mod:`.query_expr`
     - Building blocks of the Analytics query language. Not for direct use.
   * - :mod:`.session`
     - Interactive query evaluation using a differential privacy framework.
   * - :mod:`.truncation_strategy`
     - Defines strategies for performing truncation in private joins.
   * - :mod:`.utils`
     - Utility functions for Analytics.

.. toctree::
   :hidden:

   binning_spec/index.rst
   cleanup/index.rst
   keyset/index.rst
   privacy_budget/index.rst
   protected_change/index.rst
   query_builder/index.rst
   query_expr/index.rst
   session/index.rst
   truncation_strategy/index.rst
   utils/index.rst






This diagram shows the basic workflow for most Analytics operations. (Click
to see full-size image.)

.. thumbnail:: ../../../images/api_diagram.svg
