public/analytics/v0.10/_sources/reference/tmlt/analytics/index.rst.txt

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


********************
API Reference
********************

.. py:module:: tmlt.analytics

.. autoapi-nested-parse::

   Tumult Analytics is a differentially private analytics library from `Tumult Labs`_.

   .. _Tumult Labs: https://tmlt.io

   The library is broken up into a number of modules that provide different
   functionality. These modules fall into a few broad categories, described below.

   **For specifying privacy guarantees**:

   * :mod:`~.session` defines the :class:`~.session.Session`, an interactive
     interface for making differentially private queries.

   * :mod:`~.privacy_budget` contains types for representing privacy budgets.

   * :mod:`~.protected_change` contains types for expressing what changes in input
     tables are protected by differential privacy.

   **For defining queries**:

   * :mod:`~.query_builder` provides an interface for constructing differentially
     private queries from basic query operations.

   * :mod:`~.keyset` defines :class:`~.keyset.KeySet`, a type for specifying the
     keys used in group-by operations.

   * :mod:`~.constraints` contains types for representing constraints used when
     evaluating queries on data with the :class:`~.protected_change.AddRowsWithID`
     protected change.

   * :mod:`~.truncation_strategy` and :mod:`~.binning_spec` provide types that are used
     to define certain types of queries.


Modules
=======

.. list-table::

   * - :mod:`.binning_spec`
     - A BinningSpec defines a binning operation on a column.
   * - :mod:`.config`
     - Configuration for Tumult Analytics.
   * - :mod:`.constraints`
     - Defines :class:`~tmlt.analytics.constraints.Constraint` types.
   * - :mod:`.keyset`
     - A KeySet specifies a list of values for one or more columns.
   * - :mod:`.privacy_budget`
     - Classes for specifying privacy budgets.
   * - :mod:`.protected_change`
     - Types for programmatically specifying what changes in input tables are protected.
   * - :mod:`.query_builder`
     - An API for building differentially private queries from basic operations.
   * - :mod:`.query_expr`
     - Building blocks of the Tumult Analytics query language. Not for direct use.
   * - :mod:`.session`
     - Interactive query evaluation using a differential privacy framework.
   * - :mod:`.truncation_strategy`
     - Defines strategies for performing truncation in private joins.
   * - :mod:`.utils`
     - Utility functions.

.. toctree::
   :hidden:

   binning_spec/index.rst
   config/index.rst
   constraints/index.rst
   keyset/index.rst
   privacy_budget/index.rst
   protected_change/index.rst
   query_builder/index.rst
   query_expr/index.rst
   session/index.rst
   truncation_strategy/index.rst
   utils/index.rst






This diagram shows the basic workflow for most Analytics operations. (Click
to see full-size image.)

.. thumbnail:: ../../../images/api_diagram.svg
